pxc/tests/test_01_px/sta8.px
namespace sta8;
import common -;


union foo {
  int first;
  int second;
}

function void func(int& a)
{
  a = 3;
}

function void sttest1()
{
  foo x;
  x.first = 5;
  func(x.first); // error
  println(x.first);
}

sttest1();

